--- a/src/app/ejercicio2/ejercicio2.component.html
+++ b/src/app/ejercicio2/ejercicio2.component.html
@@ -1,2 +1,4 @@
-<p>ejercicio2 works!</p>
-<a routerLink="/home">Back home</a>
+<p>ejercicio2</p>
+
+<a class="btnlink" routerLink="/ej2/login">Login</a><br>
+<a class="btnlink" routerLink="/home">Back home</a>
