--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,7 @@
-<a [routerLink]="['/ej1']">1</a><br>
-<a routerLink="/ej2">2</a>
+<div>
+    Ejercicios:<br>
+    <ul>
+        <li><a [routerLink]="['/ej1']">1</a></li>
+        <li><a routerLink="/ej2">2</a></li>
+    </ul>
+</div>
