--- a/src/app/ejercicio2/componentes/login/login.component.html
+++ b/src/app/ejercicio2/componentes/login/login.component.html
@@ -9,7 +9,7 @@
       <form>
         <input [(ngModel)]="usuario" type="text" id="login" class="fadeIn second" name="loginUs" placeholder="login" required>
         <input [(ngModel)]="contrasenia" type="text" id="password" class="fadeIn third" name="loginPas" placeholder="password" required>
-        <input (click)="login()"routerLink="/ej2/bienvenido" type="submit" class="fadeIn fourth" value="Log In">
+        <input (click)="login()" type="submit" class="fadeIn fourth" value="Log In">
       </form>
   
       <!-- Remind Passowrd -->
