--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,5 +3,7 @@
     <ul>
         <li><a [routerLink]="['/ej1']">1</a></li>
         <li><a routerLink="/ej2">2</a></li>
+        <li><a routerLink="/salonDeJuegos/home">TP</a></li>
+
     </ul>
 </div>
