--- a/src/app/salonDeJuegos/componentes/header/header.component.css
+++ b/src/app/salonDeJuegos/componentes/header/header.component.css
@@ -3,6 +3,7 @@
     overflow: hidden;
     background-color: black;
     padding: 12px 10px;
+    width: 100%;
   }
   
   /* Style the header links */
