--- a/src/app/salonDeJuegos/componentes/header/header.component.html
+++ b/src/app/salonDeJuegos/componentes/header/header.component.html
@@ -1,8 +1,8 @@
 <div class="header">
-    <a href="salonDeJuegos/home" class="logo">Retro games</a>
+    <a href="#" class="logo">Retro games</a>
     <div class="header-right">
-      <a class="active" href="salonDeJuegos/home">Home</a>
-      <a href="salonDeJuegos/home">Juegos</a>
-      <a href="salonDeJuegos/home">Informacion</a>
+      <a class="active" href="#">Home</a>
+      <a href="#">Juegos</a>
+      <a href="#">Informacion</a>
     </div>
   </div>
