--- a/src/app/salonDeJuegos/componentes/home/home.component.html
+++ b/src/app/salonDeJuegos/componentes/home/home.component.html
@@ -1,8 +1,45 @@
-<body>
-    <div><app-header></app-header></div>
-    <div *ngIf="deslogueado" id="login">
-        <app-login-games></app-login-games>
-    </div>
-</body>
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-dark">
+            <app-quien-soy></app-quien-soy>
+      </div>
+      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+        <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+          <div class="my-3 py-3">
+            <h2 class="display-5">Juego 1</h2>
+            <p class="lead">Descripcion del juego 1</p>
+            <input class="inputColors" type="button" value="Jugar">
+          </div>
+          <div class="bg-light shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+          <div class="my-3 p-3">
+            <h2 class="display-5">Juego 2</h2>
+            <p class="lead">Descripcion del juego 2</p>
+            <input class="inputColors" type="button" value="Jugar">
+          </div>
+          <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+        </div>
+      </div>
+      
+      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+        <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+          <div class="my-3 p-3">
+            <h2 class="display-5">Juego 3</h2>
+            <p class="lead">Descripcion del juego 3</p>
+            <input class="inputColors" type="button" value="Jugar">
+          </div>
+          <div class="bg-light shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+            <div class="my-3 py-3">
+            <h2 class="display-5">Juego 4</h2>
+            <p class="lead">And an even wittier subheading.</p>
+            <input class="inputColors" type="button" value="Jugar">
+          </div>
+          <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+        </div>
+       </div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script>window.jQuery || document.write('<script src="../assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+      
     
 
