--- a/src/app/salonDeJuegos/componentes/quien-soy/quien-soy.component.html
+++ b/src/app/salonDeJuegos/componentes/quien-soy/quien-soy.component.html
@@ -1,6 +1,8 @@
 <div class="card">
     <h1>Datos del jugador</h1>
     <p class="title">Nombre de usuario: {{name}}</p>
-    <p><button (click)="clearStorage()" routerLink="/salonDeJuegos/home">Cerrar sesion</button></p>
+    <p class="title">mail: {{mail}}</p>
+    <p><button (click)="logout()">Cerrar sesion</button></p>
 </div>
+
 
