--- a/src/app/salonDeJuegos/componentes/home/home.component.html
+++ b/src/app/salonDeJuegos/componentes/home/home.component.html
@@ -32,7 +32,7 @@
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
             <div class="my-3 py-3">
             <h2 class="display-5">Juego 4</h2>
-            <p class="lead">And an even wittier subheading.</p>
+            <p class="lead">Descripcion del juego 3</p>
             <input class="inputColors" type="button" value="Jugar">
           </div>
           <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
