--- a/src/app/salonDeJuegos/componentes/header/header.component.html
+++ b/src/app/salonDeJuegos/componentes/header/header.component.html
@@ -2,7 +2,7 @@
     <a href="#" class="logo">Retro games</a>
     <div class="header-right">
       <a class="active" href="#">Home</a>
-      <a href="#">Juegos</a>
+      <a (click)="goJuegos()">Juegos</a>
       <a href="#">Informacion</a>
     </div>
   </div>
