--- a/src/app/salonDeJuegos/componentes/home/home.component.html
+++ b/src/app/salonDeJuegos/componentes/home/home.component.html
@@ -4,19 +4,19 @@
       <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
         <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
           <div class="my-3 py-3">
-            <h2 class="display-5">Juego 1</h2>
-            <p class="lead">Descripcion del juego 1</p>
-            <input class="inputColors" type="button" value="Jugar">
+            <h2 class="display-5">Ahorcado</h2>
+            <p class="lead">¡Diviertete adivinando palabras!</p>
+            <input class="inputColors" type="button" value="Jugar" (click)="irAhorcado()">
           </div>
-          <div class="bg-light shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+          <div id="divAhorc" class="bg-light shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
         </div>
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
           <div class="my-3 p-3">
-            <h2 class="display-5">Juego 2</h2>
-            <p class="lead">Descripcion del juego 2</p>
-            <input class="inputColors" type="button" value="Jugar">
+            <h2 class="display-5">Mayor o menor</h2>
+            <p class="lead">¡Intenta adivinar la proxima carta!</p>
+            <input class="inputColors" type="button" value="Jugar" (click)="irMayMen()">
           </div>
-          <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+          <div id="divMayMen" class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
         </div>
       </div>
       
@@ -32,7 +32,7 @@
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
             <div class="my-3 py-3">
             <h2 class="display-5">Juego 4</h2>
-            <p class="lead">Descripcion del juego 3</p>
+            <p class="lead">Descripcion del juego 4</p>
             <input class="inputColors" type="button" value="Jugar">
           </div>
           <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
