--- a/src/app/salonDeJuegos/componentes/header/header.component.html
+++ b/src/app/salonDeJuegos/componentes/header/header.component.html
@@ -3,6 +3,6 @@
     <div class="header-right">
       <a class="active" href="#">Home</a>
       <a (click)="goJuegos()">Juegos</a>
-      <a href="#">Informacion</a>
+      <a (click)="goChat()">Chat</a>
     </div>
   </div>
