--- a/src/app/salonDeJuegos/componentes/error/error.component.html
+++ b/src/app/salonDeJuegos/componentes/error/error.component.html
@@ -1,1 +1,14 @@
-<p>error works!</p>
+<body>
+  <section class="centered">
+    <div id="lineas">
+        <h1>ERROR, posibles situaciones:</h1>
+        <ul>
+            <li>Modifico la URL</li>
+            <li>Intento entrar a los juegos sin estar logueado</li>
+            <li>Intento entrar al chat sin estar logueado</li>
+            <li>Rompio algo</li>
+            <li><a (click)="irLogin()">Ir al login</a></li>
+        </ul>
+    </div>
+  </section>
+</body>
