--- a/src/app/salonDeJuegos/componentes/registro/registro.component.html
+++ b/src/app/salonDeJuegos/componentes/registro/registro.component.html
@@ -16,7 +16,7 @@
     
         <!-- Remind Passowrd -->
         <div id="formFooter">
-          <a class="underlineHover" href="salonDeJuegos/login">Iniciar sesion</a>
+          <a class="underlineHover" routerLink="/administracion/login">Iniciar sesion</a>
           <div>
   
           </div>
