--- a/src/app/salonDeJuegos/componentes/login/login.component.css
+++ b/src/app/salonDeJuegos/componentes/login/login.component.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 body{
-  background-image:url('../../assets/wallpaper.jpg');
+  background-image:url('../../../../assets/wallpaper.jpg');
 }
 /* BASIC */
 
