--- a/src/app/salonDeJuegos/componentes/login/login.component.html
+++ b/src/app/salonDeJuegos/componentes/login/login.component.html
@@ -16,7 +16,7 @@
   
       <!-- Remind Passowrd -->
       <div id="formFooter">
-        <a class="underlineHover" href="salonDeJuegos/registro">Crear cuenta</a>
+        <a class="underlineHover" routerLink="/administracion/registro">Crear cuenta</a>
         <div>
 
         </div>
