--- a/src/app/salonDeJuegos/componentes/header/header.component.html
+++ b/src/app/salonDeJuegos/componentes/header/header.component.html
@@ -4,5 +4,6 @@
       <a class="active" href="#">Home</a>
       <a (click)="goJuegos()">Juegos</a>
       <a (click)="goChat()">Chat</a>
+      <a (click)="goQuienSoy()">Quien Soy</a>
     </div>
   </div>
