--- a/src/app/salonDeJuegos/componentes/home/home.component.css
+++ b/src/app/salonDeJuegos/componentes/home/home.component.css
@@ -109,3 +109,17 @@ body{
     background-size: contain;
     background-position: center;
   }
+
+  #divPreguntados{
+    background-image: url('../../assets/preguntados.jpg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+  }
+
+  #divCasaApuestas{
+    background-image: url('../../assets//casaapuestas.jpg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+  }
