--- a/src/app/salonDeJuegos/componentes/login/login.component.html
+++ b/src/app/salonDeJuegos/componentes/login/login.component.html
@@ -25,6 +25,8 @@
           Error, usuario inexistente o datos incorrectos.
         </div>
       </div>
+
+      <img src="" alt="">
     </div>
   </div>
 </body>
