--- a/src/app/salonDeJuegos/componentes/preguntados/preguntados.component.html
+++ b/src/app/salonDeJuegos/componentes/preguntados/preguntados.component.html
@@ -1,5 +1,6 @@
 <div class="card">
     <div class="container">
+    <h1 style="width: 100%; text-align: center; border: 2px solid black;">¿Qué pais es el de la imagen?</h1>
     <img [src]="paisesX[random].flag" alt="Avatar" style="width:100%">
         <div id="botones">
             <button (click)="validarRta(1)" id="rtaUno"></button>
