--- a/src/app/salonDeJuegos/componentes/login/login.component.html
+++ b/src/app/salonDeJuegos/componentes/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="wrapper fadeInDown">
     <div id="formContent">
       <!-- Tabs Titles -->
-      <h2 class="active"> Inicio de sesion </h2>  
+      <h2 class="active"> Inicio de sesión </h2>  
       <!-- Icon -->
   
       <!-- Login Form -->
