seccion resultados de los juegos agregada

--- a/src/app/salonDeJuegos/componentes/header/header.component.html
+++ b/src/app/salonDeJuegos/componentes/header/header.component.html
@@ -3,6 +3,7 @@
     <div class="header-right">
       <a class="active" href="#">Home</a>
       <a (click)="goJuegos()">Juegos</a>
+      <a (click)="goResultados()">Resultados</a>
       <a (click)="goChat()">Chat</a>
       <a (click)="goQuienSoy()">Quien Soy</a>
     </div>
