seccion resultado de las encuestas agregada y guard para que el admin pueda verla nomas

--- a/src/app/salonDeJuegos/componentes/header/header.component.html
+++ b/src/app/salonDeJuegos/componentes/header/header.component.html
@@ -4,6 +4,7 @@
       <a class="active" href="#">Home</a>
       <a (click)="goJuegos()">Juegos</a>
       <a (click)="goResultados()">Resultados</a>
+      <a (click)="goEncuestas()">Encuestas</a>
       <a (click)="goChat()">Chat</a>
       <a (click)="goQuienSoy()">Quien Soy</a>
     </div>
