--- a/src/app/salonDeJuegos/componentes/header/header.component.css
+++ b/src/app/salonDeJuegos/componentes/header/header.component.css
@@ -17,6 +17,7 @@
     line-height: 25px;
     border-radius: 4px;
     text-transform: uppercase;
+    cursor: pointer;
   }
   
   /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
