foto perfil agregada en componente quien soy

--- a/src/app/salonDeJuegos/componentes/info-quien-soy/info-quien-soy.component.html
+++ b/src/app/salonDeJuegos/componentes/info-quien-soy/info-quien-soy.component.html
@@ -1,6 +1,7 @@
 <div class="card">
     <h1>Datos del creador de la pagina</h1>
     <p class="title">Martín Herrera</p>
+    <div class="title"><img src="../../../../assets/perfil.png" alt="" class="fotoPerfil"></div>
     <p class="title">Información del juego propio: </p>
     <p>La idea es elegir una cantidad de puntos que el usuario quiera apostar antes de empezar el juego, una vez que inicia pasa lo siguiente: el jugador va a ver una grilla de botones donde al pulsar uno tendrá una probabilidad de ganar o perder. Si gana obtendrá los puntos que apostó multiplicado por una cantidad y tendrá la posibilidad de continuar jugando o retirar lo que ganó.
         Si retira lo que gano el juego se termina ahí y puede empezar de nuevo.
