--- a/src/app/salonDeJuegos/componentes/info-quien-soy/info-quien-soy.component.css
+++ b/src/app/salonDeJuegos/componentes/info-quien-soy/info-quien-soy.component.css
@@ -35,3 +35,9 @@
   button:hover, a:hover {
     opacity: 0.7;
   }
+  
+  .fotoPerfil{
+    height: 200px;
+    width: 200px;
+    margin-bottom: 1.2rem;
+  }
